--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main-inner">
       <h1 class="visually-hidden"> Городок Седона </h1>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества города</h2>
